Make sidebar respond better to small and x-small screen sizes

--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,6 @@
     <div class="container">
       
       <div class="row">
-        <div id="project-list" class="col-md-8">
-        </div>
 
          <!-- Blog Sidebar Widgets Column -->
          <div class="col-md-4">
@@ -73,7 +71,7 @@
              </div>
 
              <!-- Blog Categories Well -->
-             <div class="well">
+             <div class="well hidden-sm hidden-xs">
                  <h4>Project Categories</h4>
                  <div id="categories" class="row">
                      <div class="col-lg-6">
@@ -87,6 +85,9 @@
                  </div>
                  <!-- /.row -->
              </div>
+        </div>
+
+        <div id="project-list" class="col-md-8">
         </div>
       </div>
 
