Zoom to fit data on load

--- a/public/map.html
+++ b/public/map.html
@@ -48,6 +48,7 @@
           markers.addLayer(marker);
         });
 
+        map.fitBounds(markers.getBounds());
         map.addLayer(markers);
       }
     });
