--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <script src="/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+    <!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+    for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
+    mixpanel.init("68c1ee8d2a96aa1d9cf7bc37dd4cf6a7");</script><!-- end Mixpanel -->
   </head>
   <body>
     <!--[if lt IE 8]>
@@ -99,7 +103,7 @@
     </div> <!-- /container -->
 
     <script id="project-template" type="text/x-handlebars-template">
-      <article class="project-tile well" data-id="{{id}}" data-category="{{category}}">
+      <article class="project-tile well" data-name="{{name}}" data-id="{{id}}" data-category="{{category}}" data-tags="{{tags}}">
         <h3><a href="#">{{name}}</a></h3>
         <p class="lead">{{category}}</p>
 
@@ -108,12 +112,13 @@
 
         <p><span class="fa fa-map-o"></span> {{location}}</p>
         <p><span class="fa fa-link"></span> <a href="{{url}}">Website</a></p>
+
         {{#if needsVolunteers}}<p><span class="fa fa-users"></span> currently looking for volunteers</p>{{/if}}
 
         <ul class="list-inline">
-            {{#if facebookUrl}}<li><a href="{{facebookUrl}}"><i class="fa fa-2x fa-facebook-square"></i></a></li>{{/if}}
-            {{#if linkedinUrl}}<li><a href="{{linkedinUrl}}"><i class="fa fa-2x fa-linkedin-square"></i></a></li>{{/if}}
-            {{#if twitterUrl}}<li><a href="{{twitterUrl}}"><i class="fa fa-2x fa-twitter-square"></i></a></li>{{/if}}
+            {{#if facebookUrl}}<li><a href="{{facebookUrl}}" data-type="social"><i class="fa fa-2x fa-facebook-square"></i></a></li>{{/if}}
+            {{#if linkedinUrl}}<li><a href="{{linkedinUrl}}" data-type="social"><i class="fa fa-2x fa-linkedin-square"></i></a></li>{{/if}}
+            {{#if twitterUrl}}<li><a href="{{twitterUrl}}" data-type="social"><i class="fa fa-2x fa-twitter-square"></i></a></li>{{/if}}
         </ul>
       </article>
     </script>
